# CMake_Template

./: CMakeLists.txt  README.md
executables/: CMakeLists.txt  spdlog_tutorial.cpp
our_project/: CMakeLists.txt
